# tovsa-p2p-e2e

./: build-desktop.yml  build-twa.sh  deploy.yml  gen-update-json.js  get-semver.js  index.html  manifest.json  patch-version.js  patch-version.py  sw.js  update-csp-hashes.py  update.json
.github/workflows/: build-apk.yml  build-desktop.yml
.well-known/: assetlinks.json
src-tauri/: Cargo.toml  build-desktop.yml  tauri.conf.json
src-tauri/src/: main.rs
