[package]
name    = "tovsa"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                = { version = "2", features = [] }
tauri-plugin-shell   = { version = "2" }
tauri-plugin-updater = { version = "2" }
tauri-plugin-dialog  = { version = "2" }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
tokio                = { version = "1", features = ["sync"] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
